@@ -15,6 +15,7 @@
 #' \dontrun{
 #' data(humface)
 #' humresample <- vcgUniformRemesh(humface,voxelSize=1,multiSample = TRUE)
+#' require(rgl)
 #' shade3d(humresample,col=3)
 #' }
 #' @export
